--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install requests
+        pip install gspread
     - name: Analysing the code with pylint
       run: |
         pylint `find . -iname "*.py"`
